# naqsh

./: .gitignore  Cargo.toml
.github/workflows/: naqsh-js-ci.yml  naqsh-py-ci.yml  naqsh-rs-ci.yml
naqsh-js/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
naqsh-js/npm/android-arm-eabi/: README.md  package.json
naqsh-js/npm/android-arm64/: README.md  package.json
naqsh-js/npm/darwin-arm64/: README.md  package.json
naqsh-js/npm/darwin-x64/: README.md  package.json
naqsh-js/npm/freebsd-x64/: README.md  package.json
naqsh-js/npm/linux-arm-gnueabihf/: README.md  package.json
naqsh-js/npm/linux-arm64-gnu/: README.md  package.json
naqsh-js/npm/linux-arm64-musl/: README.md  package.json
naqsh-js/npm/linux-x64-gnu/: README.md  package.json
naqsh-js/npm/linux-x64-musl/: README.md  package.json
naqsh-js/npm/win32-arm64-msvc/: README.md  package.json
naqsh-js/npm/win32-ia32-msvc/: README.md  package.json
naqsh-js/npm/win32-x64-msvc/: README.md  package.json
naqsh-js/src/: lib.rs
naqsh-py/: Cargo.toml  pyproject.toml
naqsh-py/src/: lib.rs
naqsh-rs/: Cargo.toml
naqsh-rs/src/: asset.rs  font.rs  image.rs
naqsh-rs/src/graphics/: color.rs  color_cut_quantizer.rs  color_utils.rs  mod.rs  palette.rs
naqsh-rs/src/object/: mod.rs  rect.rs
naqsh-rs/src/parser/: manifest.rs  parser.rs
naqsh-rs/src/util/: sparse_boolean_array.rs
src/: image.rs  lib.rs  util.rs
src/graphics/: canvas.rs  color.rs  color_int.rs  color_utils.rs  mod.rs  palette.rs  sparse_boolean_array.rs  target.rs
src/palette/: color.rs  color_cut_quantizer.rs  (+4 more)
(+2 files in other folders)
